==> gsshch/ESP8266_NONOS_SDK/app/driver/apds9960.c <==
#include "../include/driver/apds9960.h"
#include "../../app/include/driver/i2c_master.h"
#include "c_types.h"
#include "mem.h"
#include "osapi.h"

int ICACHE_FLASH_ATTR readGesture() {
	uint8_t fifo_level = 0;
	int bytes_read = 0;
	uint8_t fifo_data[64];
	uint8_t fifo_data2[64];
	uint8_t gstatus;
	int motion;
	int i;

	/* Make sure that power and gesture is on and data is valid */
	if (!isGestureAvailable() || !(getMode() & 0b01000001)) {
		return DIR_NONE;
	}

	/* Keep looping as long as gesture data is valid */
	while (1) {

		/* Wait some time to collect next batch of FIFO data */
		__delay_ms(FIFO_PAUSE_TIME);

		/* Get the contents of the STATUS register. Is data still valid? */
		gstatus = wireReadDataByte(APDS9960_GSTATUS);

		/* If we have valid data, read in FIFO */
		if ((gstatus & APDS9960_GVALID) == APDS9960_GVALID) {
			/* Read the current FIFO level */
			fifo_level = wireReadDataByte(APDS9960_GFLVL);

			/* If there's stuff in the FIFO, read it into our data block */
			if (fifo_level > 0) {

				if (fifo_level < 17) {
					bytes_read = wireReadDataBlock( APDS9960_GFIFO_U,
							(uint8_t*) fifo_data, (fifo_level * 4));
				} else {
					bytes_read = wireReadDataBlock( APDS9960_GFIFO_U,
							(uint8_t*) fifo_data2, (fifo_level * 4));
				}

				if (bytes_read == -1) {
					return ERROR;
				}

				/* If at least 1 set of data, sort the data into U/D/L/R */
				if (bytes_read >= 4) {

					for (i = 0; i < bytes_read; i += 4) {
						gesture_data_.u_data[gesture_data_.index] = fifo_data[i
								+ 0];
						gesture_data_.d_data[gesture_data_.index] = fifo_data[i
								+ 1];
						gesture_data_.l_data[gesture_data_.index] = fifo_data[i
								+ 2];
						gesture_data_.r_data[gesture_data_.index] = fifo_data[i
								+ 3];
						gesture_data_.index++;
						gesture_data_.total_gestures++;
					}

					/* Filter and process gesture data. Decode near/far state */
					if (processGestureData()) {

						if (decodeGesture()) {
							//***TODO: U-Turn Gestures
						}
					}

					/* Reset data */
					gesture_data_.index = 0;
					gesture_data_.total_gestures = 0;
				}
			}
		} else {

			/* Determine best guessed gesture and clean up */
			__delay_ms(FIFO_PAUSE_TIME);
			decodeGesture();
			motion = gesture_motion_;

			resetGestureParameters();

			return motion;
		}
	}
}

bool ICACHE_FLASH_ATTR processGestureData() {
	uint8_t u_first = 0;
	uint8_t d_first = 0;
	uint8_t l_first = 0;
	uint8_t r_first = 0;
	uint8_t u_last = 0;
	uint8_t d_last = 0;
	uint8_t l_last = 0;
	uint8_t r_last = 0;
	int ud_ratio_first;
	int lr_ratio_first;
	int ud_ratio_last;
	int lr_ratio_last;
	int ud_delta;
	int lr_delta;
	int i;

	/* If we have less than 4 total gestures, that's not enough */
	if (gesture_data_.total_gestures <= 4) {
		return false;
	}

	/* Check to make sure our data isn't out of bounds */
	if ((gesture_data_.total_gestures <= 32)
			&& (gesture_data_.total_gestures > 0)) {

		/* Find the first value in U/D/L/R above the threshold */
		for (i = 0; i < gesture_data_.total_gestures; i++) {
			if ((gesture_data_.u_data[i] > GESTURE_THRESHOLD_OUT)
					&& (gesture_data_.d_data[i] > GESTURE_THRESHOLD_OUT)
					&& (gesture_data_.l_data[i] > GESTURE_THRESHOLD_OUT)
					&& (gesture_data_.r_data[i] > GESTURE_THRESHOLD_OUT)) {

				u_first = gesture_data_.u_data[i];
				d_first = gesture_data_.d_data[i];
				l_first = gesture_data_.l_data[i];
				r_first = gesture_data_.r_data[i];
				break;
			}
		}

		/* If one of the _first values is 0, then there is no good data */
		if ((u_first == 0) || (d_first == 0) || (l_first == 0)
				|| (r_first == 0)) {

			return false;
		}
		/* Find the last value in U/D/L/R above the threshold */
		for (i = gesture_data_.total_gestures - 1; i >= 0; i--) {

			if ((gesture_data_.u_data[i] > GESTURE_THRESHOLD_OUT)
					&& (gesture_data_.d_data[i] > GESTURE_THRESHOLD_OUT)
					&& (gesture_data_.l_data[i] > GESTURE_THRESHOLD_OUT)
					&& (gesture_data_.r_data[i] > GESTURE_THRESHOLD_OUT)) {

				u_last = gesture_data_.u_data[i];
				d_last = gesture_data_.d_data[i];
				l_last = gesture_data_.l_data[i];
				r_last = gesture_data_.r_data[i];
				break;
			}
		}
	}

	/* Calculate the first vs. last ratio of up/down and left/right */
	ud_ratio_first = ((u_first - d_first) * 100) / (u_first + d_first);
	lr_ratio_first = ((l_first - r_first) * 100) / (l_first + r_first);
	ud_ratio_last = ((u_last - d_last) * 100) / (u_last + d_last);
	lr_ratio_last = ((l_last - r_last) * 100) / (l_last + r_last);

	/* Determine the difference between the first and last ratios */
	ud_delta = ud_ratio_last - ud_ratio_first;
	lr_delta = lr_ratio_last - lr_ratio_first;

	/* Accumulate the UD and LR delta values */
	gesture_ud_delta_ += ud_delta;
	gesture_lr_delta_ += lr_delta;

	/* Determine U/D gesture */
	if (gesture_ud_delta_ >= GESTURE_SENSITIVITY_1) {
		gesture_ud_count_ = 1;
	} else if (gesture_ud_delta_ <= -GESTURE_SENSITIVITY_1) {
		gesture_ud_count_ = -1;
	} else {
		gesture_ud_count_ = 0;
	}

	/* Determine L/R gesture */
	if (gesture_lr_delta_ >= GESTURE_SENSITIVITY_1) {
		gesture_lr_count_ = 1;
	} else if (gesture_lr_delta_ <= -GESTURE_SENSITIVITY_1) {
		gesture_lr_count_ = -1;
	} else {
		gesture_lr_count_ = 0;
	}

	/* Determine Near/Far gesture */
	if ((gesture_ud_count_ == 0) && (gesture_lr_count_ == 0)) {
		if ((abs(ud_delta) < GESTURE_SENSITIVITY_2)
				&& (abs(lr_delta) < GESTURE_SENSITIVITY_2)) {

			if ((ud_delta == 0) && (lr_delta == 0)) {
				gesture_near_count_++;
			} else if ((ud_delta != 0) || (lr_delta != 0)) {
				gesture_far_count_++;
			}

			if ((gesture_near_count_ >= 10) && (gesture_far_count_ >= 2)) {
				if ((ud_delta == 0) && (lr_delta == 0)) {
					gesture_state_ = NEAR_STATE;
				} else if ((ud_delta != 0) && (lr_delta != 0)) {
					gesture_state_ = FAR_STATE;
				}
				return true;
			}
		}
	} else {
		if ((abs(ud_delta) < GESTURE_SENSITIVITY_2)
				&& (abs(lr_delta) < GESTURE_SENSITIVITY_2)) {

			if ((ud_delta == 0) && (lr_delta == 0)) {
				gesture_near_count_++;
			}

			if (gesture_near_count_ >= 10) {
				gesture_ud_count_ = 0;
				gesture_lr_count_ = 0;
				gesture_ud_delta_ = 0;
				gesture_lr_delta_ = 0;
			}
		}
	}

	return false;
}

int ICACHE_FLASH_ATTR wireReadDataBlock(uint8_t reg, uint8_t *val, unsigned int len) {
	unsigned char j = 0;

	i2c.i2c_master_start();
	i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x00); // Slave address + Write command

	i2c.i2c_master_writeByte(reg); // write the location

	for (j = 0; j < len; j++) {

//		I2C_ReStart();
		i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x01); //Slave address+ read command
		val[j] = i2c.i2c_master_readByte(); // Store the Receive value in a variable
		i2c.i2c_master_send_nack();
	}

	i2c.i2c_master_stop();

	return (int) j;
}

int ICACHE_FLASH_ATTR wireWriteDataByte(unsigned char reg, unsigned char val) {

	i2c.i2c_master_start();
	i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x00); // Slave address + Write command
	i2c.i2c_master_writeByte(reg); // write the location
	i2c.i2c_master_writeByte(val); // Write the Data
	i2c.i2c_master_stop();

	return 1;
}

uint8_t ICACHE_FLASH_ATTR wireReadDataByte(unsigned char reg) {
	/* Indicate which register we want to read from */
	unsigned char val;

	i2c.i2c_master_start();
	i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x00); // Slave address + Write command
	i2c.i2c_master_writeByte(reg); // write location
//	I2C_ReStart();
	i2c.i2c_master_writeByte((APDS9960_I2C_ADDR << 1) | 0x01); //Slave address+ read command
	val = i2c.i2c_master_readByte();   // Store the Receive value in a variable
	i2c.i2c_master_send_nack();
	i2c.i2c_master_stop();

	return (val);

}
